WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207411
Several iOS API tests that call -makeKeyWindow assert after
r255907
https://bugs.webkit.org/show_bug.cgi?id=207411
Summary
Several iOS API tests that call -makeKeyWindow assert after r255907
Wenson Hsieh
Reported
2020-02-07 15:19:50 PST
...in hindsight, this assert wasn't a particularly good idea.
Attachments
Patch
(3.75 KB, patch)
2020-02-07 15:24 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(3.75 KB, patch)
2020-02-07 21:28 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-02-07 15:24:34 PST
Created
attachment 390136
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-07 16:39:34 PST
Comment on
attachment 390136
[details]
Patch Clearing flags on attachment: 390136 Committed
r256079
: <
https://trac.webkit.org/changeset/256079
>
WebKit Commit Bot
Comment 3
2020-02-07 16:39:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-02-07 16:40:14 PST
<
rdar://problem/59278703
>
Wenson Hsieh
Comment 5
2020-02-07 21:28:55 PST
Comment hidden (obsolete)
Reopening to attach new patch.
Wenson Hsieh
Comment 6
2020-02-07 21:28:56 PST
Comment hidden (obsolete)
Created
attachment 390166
[details]
Patch
Wenson Hsieh
Comment 7
2020-02-07 21:30:09 PST
Comment on
attachment 390166
[details]
Patch (Sorry — I did not mean to reopen this)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug