Several iOS API tests that call -makeKeyWindow assert after r255907 https://bugs.webkit.org/show_bug.cgi?id=207411

Reviewed by Tim Horton.

r255907 asserted in -makeKeyWindow that the shared UIApplication exists. While this was guaranteed for all call
sites of -makeKeyWindow from API tests, -makeKeyWindow may also be invoked from within UIKit code; in this case,
nothing guarantees that the application has been initialized, and we end up hitting this assertion. To fix this,
replace the assertion with logic to bootstrap the shared UIApplication (if it didn't already exist).

* TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:
(TestWebKitAPI::TEST):
(TestWebKitAPI::overrideBundleIdentifier): Deleted.
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(overrideBundleIdentifier):
(setOverriddenApplicationKeyWindow):


Canonical link: https://commits.webkit.org/220417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256079 268f45cc-cd09-0410-ab3c-d52691b4dbfc